--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,39 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# --- Node / package managers ---
+node_modules/
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+*.log
 
-# env files (can opt-in for committing if needed)
-.env*
+# --- Next.js ---
+.next/
+.next/cache/
+out/
+.vercel/
+.turbo/
 
-# vercel
-.vercel
-
-# typescript
+# --- Build artifacts ---
+dist/
+coverage/
 *.tsbuildinfo
-next-env.d.ts
+
+# --- Environment ---
+.env
+.env.*
+!.env.example
+
+# --- Editor / OS junk ---
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# --- Public cache (if you ever generate images at build time) ---
+public/*.cache/
+
+# --- Project-specific: ignore requested config files ---
+# (Note: this makes your repo less portable—only do this if you’re sure.)
+next.config.mjs
+postcss.config.js
+tailwind.config.ts
+mdx.d.ts
